docs/EBNF.txt
<program> ::= { <statement> }

<statement> ::= <variable_declaration>
              | <assignment>
              | <print_statement>
              | <if_statement>
              | <while_statement>
              | <function_definition>
              | <return_statement>
              | <expression_statement>

<variable_declaration> ::= "let" <identifier> "=" <expression>

<assignment> ::= <identifier> "=" <expression>

<print_statement> ::= "print" "(" <expression> ")"

<if_statement> ::= "if" "(" <expression> ")" <block>
                   [ "else" <block> ]

<while_statement> ::= "while" "(" <expression> ")" <block>

<function_definition> ::= "fun" [<identifier>] "(" [ <parameters> ] ")"
                          <block>

<parameters> ::= <identifier> { "," <identifier> }

<return_statement> ::= "return" <expression>

<expression_statement> ::= <expression>

<block> ::= "{" { <statement> } "}"

<expression> ::= <comparison>

<comparison> ::= <term>
               | <term> <comparison-operator> <term>

<term> ::= <factor> { ("+" | "-") <factor> }

<factor> ::= <unary> { ("*" | "/" | "%") <unary> }

<unary> ::= [ "-" ] <primary>
            | <power>

<power> ::= <primary> [ "^" <unary> ]

<primary> ::= <number>
            | <boolean>
            | <identifier>
            | <function-call>
            | "(" <expression> ")"

<function-call> ::= <identifier> "(" [ <arguments> ] ")"

<arguments> ::= <expression> { "," <expression> }

<comparison-operator> ::= "=="
                        | "="
                        | "!="
                        | "<"
                        | ">"
                        | "<="
                        | ">="

<boolean> ::= "true" | "false"

<number> ::= <digit> { <digit> }

<identifier> ::= <letter> { <letter> | <digit> }

<letter> ::= "A" | "B" | ... | "Z"
           | "a" | "b" | ... | "z"
           | "_"

<digit> ::= "0" | "1" | "2" | "3" | "4"
          | "5" | "6" | "7" | "8" | "9"
